# aoc_c

2025/: 4.c  5.c  8.c
source/2025/: 11.c  12.c  2.c  6.c  7.c  8.c  9.c  CMakeLists.txt
source/2025/1/: main.c
source/2025/10/: CMakeLists.txt  main.c
source/2025/11/: CMakeLists.txt  main.c
source/2025/12/: CMakeLists.txt  main.c
source/2025/2/: main.c
source/2025/3/: main.c
source/2025/4/: main.c
source/2025/5/: main.c
source/2025/6/: main.c
source/2025/8/: CMakeLists.txt  main.c
source/2025/9/: CMakeLists.txt  main.c
